add: hero section

--- a/index.html
+++ b/index.html
@@ -47,7 +47,79 @@
     </nav>
 
     <!-- main -->
-    <main>Body content</main>
+    <main>
+      <!-- Hero Section -->
+      <section id="hero-section">
+        <!-- left side -->
+        <div>
+          <div class="headline-wrapper">
+            <h1>
+              Listen The Best Music Just on Your Held.
+              <span>
+                <img
+                  src="assets/images/square_stretch_pink.svg"
+                  alt="square strecth"
+                />
+              </span>
+            </h1>
+            <h2>
+              Welcome to simplicity era. Enjoy your favourite song, album, and
+              artist with our breakthrough only in one super app, one hand.
+            </h2>
+          </div>
+          <div class="cta-wrapper">
+            <button class="button button-primary">Download Now</button>
+            <button class="button button-outline">Top 5 songs</button>
+          </div>
+          <div class="statistic-wrapper">
+            <!-- active users wrapper -->
+            <div class="active-users-wrapper">
+              <div class="active-users">
+                <!-- user 1-->
+                <div class="active-users-profile" style="--bgColor: #f49392">
+                  <img src="" alt="" />
+                </div>
+                <!-- user 2-->
+                <div class="active-users-profile" style="--bgColor: #1e9896">
+                  <img src="" alt="" />
+                </div>
+                <!-- user 3-->
+                <div class="active-users-profile" style="--bgColor: #f09b83">
+                  <img src="" alt="" />
+                </div>
+              </div>
+              <div class="active-users-description">
+                <p>
+                  500 K + <br />
+                  <span>active users</span>
+                </p>
+              </div>
+            </div>
+            <!-- divider -->
+            <div class="divider"></div>
+            <!-- users rating -->
+            <div class="users-rating-wrapper">
+              <div class="star-wrapper">
+                <img src="" alt="" />
+              </div>
+              <div class="rating-description">
+                <p>
+                  4.7 <br />
+                  <span>User Rating</span>
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- right side -->
+        <div>
+          <img
+            src="assets/images/listening_music.png"
+            alt="woman listening music"
+          />
+        </div>
+      </section>
+    </main>
 
     <!-- footer -->
     <footer>footer</footer>
