add: feature section

--- a/index.html
+++ b/index.html
@@ -186,6 +186,56 @@
           </div>
         </div>
       </section>
+      <!-- feature section -->
+      <section id="feature-section">
+        <div class="content">
+          <div>
+            <div class="label">Feature</div>
+            <h2 class="title">Why Should Melodict?</h2>
+            <p class="subtitle">
+              There some features that you can get while using Melodict
+            </p>
+          </div>
+          <!-- feature list -->
+          <div class="feature-list-wrapper">
+            <!-- feature card -->
+            <div class="feature-card">
+              <div class="feature-image">
+                <img src="" alt="" />
+              </div>
+              <h3>Amazing Algorithm</h3>
+              <p>
+                Our smart algorithm can suggest the best genres and songs based
+                on your behavior and most listened on your device
+              </p>
+            </div>
+            <!-- feature card -->
+            <div class="feature-card">
+              <div class="feature-image">
+                <img src="" alt="" />
+              </div>
+              <h3>Smart Lyric</h3>
+              <p>
+                Enjoy new experience on read lyrics that following rythm of the
+                song, so you can karaoke just on your phone
+              </p>
+            </div>
+            <!-- feature card -->
+            <div class="feature-card">
+              <div class="feature-image">
+                <img src="" alt="" />
+              </div>
+              <h3>Follow Your Idol</h3>
+              <p>
+                Now you can follow your favourite idol to get recommendation on
+                theiralbums or songs also you can get notification every new
+                release song
+              </p>
+            </div>
+          </div>
+          <button class="button button-primary">Learn More</button>
+        </div>
+      </section>
     </main>
 
     <!-- footer -->
