add: footer section

--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
           <div>
             <img
               src="assets/images/listening_music.png"
+              class="song-cover"
               alt="woman listening music"
             />
           </div>
@@ -236,9 +237,157 @@
           <button class="button button-primary">Learn More</button>
         </div>
       </section>
+      <!-- top song section -->
+      <section id="top-song-section">
+        <div class="content">
+          <div class="label">Category</div>
+          <h2 class="title">Why Should Melodict?</h2>
+          <!-- top song list -->
+          <div class="top-song-list-wrapper">
+            <!-- long song card -->
+            <div class="song-card" style="width: 100%; height: 532px">
+              <img
+                src="assets/images/listening_music.png"
+                class="song-cover"
+                alt=""
+              />
+              <div class="blur-box">
+                <div>
+                  <p class="song-title">Venice</p>
+                  <p class="artist">Esteban Paloma</p>
+                </div>
+                <button>
+                  <img src="" alt="" />
+                </button>
+              </div>
+            </div>
+            <div class="small-song-card-wrapper">
+              <div class="song-card" style="width: 381px; height: 279px">
+                <img
+                  src="assets/images/listening_music.png"
+                  class="song-cover"
+                  alt=""
+                />
+                <div class="blur-box">
+                  <div>
+                    <p class="song-title">Tropical</p>
+                    <p class="artist">Ronald Mcqueen</p>
+                  </div>
+                  <button>Play</button>
+                </div>
+              </div>
+              <div class="song-card" style="width: 433px; height: 279px">
+                <img
+                  src="assets/images/listening_music.png"
+                  class="song-cover"
+                  alt=""
+                />
+                <div class="blur-box">
+                  <div>
+                    <p class="song-title">Hawaii</p>
+                    <p class="artist">Sebastian Haller</p>
+                  </div>
+                  <button>Play</button>
+                </div>
+              </div>
+              <div class="song-card" style="width: 495px; height: 213px">
+                <img
+                  src="assets/images/listening_music.png"
+                  class="song-cover"
+                  alt=""
+                />
+                <div class="blur-box">
+                  <div>
+                    <p class="song-title">Squeeze</p>
+                    <p class="artist">John Paulista</p>
+                  </div>
+                  <button>Play</button>
+                </div>
+              </div>
+              <div class="song-card" style="width: 315px; height: 213px">
+                <img
+                  src="assets/images/listening_music.png"
+                  class="song-cover"
+                  alt=""
+                />
+                <div class="blur-box">
+                  <div>
+                    <p class="song-title">Sunset</p>
+                    <p class="artist">James Mount</p>
+                  </div>
+                  <button>Play</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- company list section -->
+      <section id="company-list-section">
+        <div class="content">
+          <img src="assets/images/logo.png" alt="" />
+          <img src="assets/images/logo.png" alt="" />
+          <img src="assets/images/logo.png" alt="" />
+          <img src="assets/images/logo.png" alt="" />
+          <img src="assets/images/logo.png" alt="" />
+        </div>
+      </section>
+      <!-- cta form section -->
+      <section id="cta-form-section">
+        <div class="content">
+          <div class="cta-wrapper">
+            <h2>
+              Keep update with our<br />
+              promo and offer
+            </h2>
+            <div class="cta-input">
+              <input type="text" placeholder="Type your email" />
+              <button class="button button-primary">Send</button>
+            </div>
+          </div>
+        </div>
+        <div class="dark-section"></div>
+      </section>
     </main>
 
     <!-- footer -->
-    <footer>footer</footer>
+    <footer>
+      <div class="content">
+        <!-- left side -->
+        <div class="tagline-wrapper">
+          <img src="assets/images/logo_name.png" alt="melodict logo" />
+          <h3>The future of music is here Get Melodict now</h3>
+        </div>
+        <div class="footer-navigation">
+          <ul>
+            <li>Sitemap</li>
+            <li>About us</li>
+            <li>Features</li>
+            <li>Category</li>
+            <li>Testimony</li>
+          </ul>
+          <ul>
+            <li>Legal</li>
+            <li>Privacy Policy</li>
+            <li>Terms and Conditions</li>
+            <li>Cookies</li>
+            <li>Licenses</li>
+          </ul>
+          <ul>
+            <li>Help</li>
+            <li>Contact Us</li>
+            <li>Download App</li>
+            <li>FAQ</li>
+            <li>Testimony</li>
+          </ul>
+        </div>
+      </div>
+      <div class="copyright-wrapper">
+        <hr />
+        <div class="copyright">
+          <p>©2022 Melodic. All rights reserved</p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
