add: asset for all section

--- a/index.html
+++ b/index.html
@@ -80,15 +80,15 @@
                 <div class="active-users">
                   <!-- user 1-->
                   <div class="active-users-profile" style="--bgColor: #f49392">
-                    <img src="" alt="" />
+                    <img src="assets/images/people/people-1.png" alt="user 1" />
                   </div>
                   <!-- user 2-->
                   <div class="active-users-profile" style="--bgColor: #1e9896">
-                    <img src="" alt="" />
+                    <img src="assets/images/people/people-2.png" alt="user 2" />
                   </div>
                   <!-- user 3-->
                   <div class="active-users-profile" style="--bgColor: #f09b83">
-                    <img src="" alt="" />
+                    <img src="assets/images/people/people-3.png" alt="user 3" />
                   </div>
                 </div>
                 <div class="active-users-description">
@@ -103,7 +103,7 @@
               <!-- users rating -->
               <div class="users-rating-wrapper">
                 <div class="star-wrapper">
-                  <img src="" alt="" />
+                  <img src="assets/icons/starIcon.svg" alt="star icon" />
                 </div>
                 <div class="rating-description">
                   <p>
@@ -143,7 +143,10 @@
               <!-- about item -->
               <div class="about-item">
                 <div class="icon">
-                  <img src="" alt="" />
+                  <img
+                    src="assets/icons/musicLibraryIcon.svg"
+                    alt="music library icon"
+                  />
                 </div>
                 <div>
                   <p class="title">Most Collection</p>
@@ -157,7 +160,10 @@
               <!-- about item -->
               <div class="about-item">
                 <div class="icon">
-                  <img src="" alt="" />
+                  <img
+                    src="assets/icons/downloadIcon.svg"
+                    alt="download icon"
+                  />
                 </div>
                 <div>
                   <p class="title">Most Wanted</p>
@@ -171,7 +177,10 @@
               <!-- about item -->
               <div class="about-item">
                 <div class="icon">
-                  <img src="" alt="" />
+                  <img
+                    src="assets/icons/circlesThreeIcon.svg"
+                    alt="circle three icon"
+                  />
                 </div>
                 <div>
                   <p class="title">Most Collection</p>
@@ -202,7 +211,10 @@
             <!-- feature card -->
             <div class="feature-card">
               <div class="feature-image">
-                <img src="" alt="" />
+                <img
+                  src="assets/images/features/feature-1.png"
+                  alt="feature 1"
+                />
               </div>
               <h3>Amazing Algorithm</h3>
               <p>
@@ -213,7 +225,10 @@
             <!-- feature card -->
             <div class="feature-card">
               <div class="feature-image">
-                <img src="" alt="" />
+                <img
+                  src="assets/images/features/feature-2.png"
+                  alt="feature 2"
+                />
               </div>
               <h3>Smart Lyric</h3>
               <p>
@@ -224,7 +239,10 @@
             <!-- feature card -->
             <div class="feature-card">
               <div class="feature-image">
-                <img src="" alt="" />
+                <img
+                  src="assets/images/features/feature-3.png"
+                  alt="feature 3"
+                />
               </div>
               <h3>Follow Your Idol</h3>
               <p>
@@ -247,9 +265,9 @@
             <!-- long song card -->
             <div class="song-card" style="width: 100%; height: 532px">
               <img
-                src="assets/images/listening_music.png"
+                src="assets/images/albumCover/venice-cover.png"
                 class="song-cover"
-                alt=""
+                alt="venice album cover"
               />
               <div class="blur-box">
                 <div>
@@ -257,65 +275,73 @@
                   <p class="artist">Esteban Paloma</p>
                 </div>
                 <button>
-                  <img src="" alt="" />
+                  <img src="assets/icons/playIcon.svg" alt="play icon" />
                 </button>
               </div>
             </div>
             <div class="small-song-card-wrapper">
               <div class="song-card" style="width: 381px; height: 279px">
                 <img
-                  src="assets/images/listening_music.png"
+                  src="assets/images/albumCover/tropica-cover.png"
                   class="song-cover"
-                  alt=""
+                  alt="tropical album cover"
                 />
                 <div class="blur-box">
                   <div>
                     <p class="song-title">Tropical</p>
                     <p class="artist">Ronald Mcqueen</p>
                   </div>
-                  <button>Play</button>
+                  <button>
+                    <img src="assets/icons/playIcon.svg" alt="play icon" />
+                  </button>
                 </div>
               </div>
               <div class="song-card" style="width: 433px; height: 279px">
                 <img
-                  src="assets/images/listening_music.png"
+                  src="assets/images/albumCover/hawaii-cover.png"
                   class="song-cover"
-                  alt=""
+                  alt="hawaii album cover"
                 />
                 <div class="blur-box">
                   <div>
                     <p class="song-title">Hawaii</p>
                     <p class="artist">Sebastian Haller</p>
                   </div>
-                  <button>Play</button>
+                  <button>
+                    <img src="assets/icons/playIcon.svg" alt="play icon" />
+                  </button>
                 </div>
               </div>
               <div class="song-card" style="width: 495px; height: 213px">
                 <img
-                  src="assets/images/listening_music.png"
+                  src="assets/images/albumCover/squezee-cover.png"
                   class="song-cover"
-                  alt=""
+                  alt="squezee album cover"
                 />
                 <div class="blur-box">
                   <div>
                     <p class="song-title">Squeeze</p>
                     <p class="artist">John Paulista</p>
                   </div>
-                  <button>Play</button>
+                  <button>
+                    <img src="assets/icons/playIcon.svg" alt="play icon" />
+                  </button>
                 </div>
               </div>
               <div class="song-card" style="width: 315px; height: 213px">
                 <img
-                  src="assets/images/listening_music.png"
+                  src="assets/images/albumCover/sunset-cover.png"
                   class="song-cover"
-                  alt=""
+                  alt="sunset album cover"
                 />
                 <div class="blur-box">
                   <div>
                     <p class="song-title">Sunset</p>
                     <p class="artist">James Mount</p>
                   </div>
-                  <button>Play</button>
+                  <button>
+                    <img src="assets/icons/playIcon.svg" alt="play icon" />
+                  </button>
                 </div>
               </div>
             </div>
@@ -325,11 +351,11 @@
       <!-- company list section -->
       <section id="company-list-section">
         <div class="content">
-          <img src="assets/images/logo.png" alt="" />
-          <img src="assets/images/logo.png" alt="" />
-          <img src="assets/images/logo.png" alt="" />
-          <img src="assets/images/logo.png" alt="" />
-          <img src="assets/images/logo.png" alt="" />
+          <img src="assets/images/companies/dolby.png" alt="dolby" />
+          <img src="assets/images/companies/jupiter.png" alt="jupiter" />
+          <img src="assets/images/companies/WMG.png" alt="WMG" />
+          <img src="assets/images/companies/sonymusic.png" alt="sonymusic" />
+          <img src="assets/images/companies/warner.png" alt="warner" />
         </div>
       </section>
       <!-- cta form section -->
