--- a/index.html
+++ b/index.html
@@ -367,8 +367,14 @@
               promo and offer
             </h2>
             <div class="cta-input">
-              <input type="text" placeholder="Type your email" />
-              <button class="button button-primary">Send</button>
+              <input
+                id="user-email"
+                type="text"
+                placeholder="Type your email"
+              />
+              <button class="button button-primary" onclick="handleSendEmail()">
+                Send
+              </button>
             </div>
           </div>
         </div>
@@ -416,4 +422,6 @@
       </div>
     </footer>
   </body>
+
+  <script src="index.js"></script>
 </html>
