refactor: add behaviour on navbar

--- a/index.html
+++ b/index.html
@@ -32,11 +32,13 @@
           </picture>
 
           <ul class="menu">
-            <li class="menu-item active">Home</li>
-            <li class="menu-item">About</li>
-            <li class="menu-item">Features</li>
-            <li class="menu-item">Category</li>
-            <li class="menu-item">Testimony</li>
+            <li class="menu-item active">
+              <a href="#hero-section">Home</a>
+            </li>
+            <li class="menu-item"><a href="#about-section">About</a></li>
+            <li class="menu-item"><a href="#feature-section">Features</a></li>
+            <li class="menu-item"><a href="#">Category</a></li>
+            <li class="menu-item"><a href="#">Testimony</a></li>
           </ul>
         </div>
         <div class="search-wrapper">
